--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,40 @@
 # MLPatrol Dependencies
 
 # Core
-gradio==6.0.0
-python-dotenv==1.0.0
+gradio>=5.0.0
+python-dotenv>=1.0.0
 
-# Agent Framework
-langchain==0.3.0
-langchain-core==0.3.0
-langchain-openai==0.2.0
-langchain-anthropic==0.2.0
-langchain-community==0.3.0
+# Agent Framework - Modern LangGraph stack
+langchain>=1.0.0
+langchain-core>=1.0.0
+langchain-openai>=1.0.0
+langchain-anthropic>=1.0.0
+langchain-community>=1.0.0
+langgraph>=1.0.0
 
 # Data Analysis
-numpy==1.26.0
-pandas==2.1.0
-scikit-learn==1.3.0
-scipy==1.11.0
+numpy>=1.26.0,<2.0.0
+pandas>=2.1.0
+scikit-learn>=1.3.0
+scipy>=1.11.0
 
 # Visualization
-matplotlib==3.8.0
-seaborn==0.13.0
-plotly==5.18.0
+matplotlib>=3.8.0
+seaborn>=0.13.0
+plotly>=5.18.0
 
 # API & Web
-requests==2.31.0
-httpx==0.25.0
+requests>=2.31.0
+httpx>=0.25.0
 
 # Utilities
-pydantic==2.5.0
-pyyaml==6.0.1
+pydantic>=2.5.0
+pyyaml>=6.0.1
 
-# Additional LangChain dependencies
-openai>=1.0.0  # For OpenAI models
+# LLM Provider SDKs
+openai>=2.0.0  # For OpenAI models
 anthropic>=0.25.0  # For Claude models
 
 # Testing
-pytest==7.4.0
-pytest-mock==3.11.1
+pytest>=7.4.0
+pytest-mock>=3.11.1
