agent answer updates

--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ httpx>=0.25.0
 # Utilities
 pydantic>=2.5.0
 pyyaml>=6.0.1
+markdown>=3.5.0
 
 # LLM Provider SDKs
 openai>=2.0.0  # For OpenAI models
