--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ pyyaml>=6.0.1
 # LLM Provider SDKs
 openai>=2.0.0  # For OpenAI models
 anthropic>=0.25.0  # For Claude models
+langchain-ollama>=0.2.0  # For Ollama local models
 
 # Testing
 pytest>=7.4.0
