Updtes from antigravity agent

--- a/.env.example
+++ b/.env.example
@@ -54,6 +54,18 @@ BRAVE_MAX_RESULTS=5
 WEB_SEARCH_ROUTE_CVE_TO=brave    # Options: brave, tavily
 WEB_SEARCH_ROUTE_GENERAL_TO=tavily  # Options: brave, tavily
 
+# ============================================================================
+# CVE Database Configuration
+# ============================================================================
+
+# National Vulnerability Database (NVD) API Key
+# Get your API key from: https://nvd.nist.gov/developers/request-an-api-key
+# Note: Requests without an API key are limited to 5 requests per 30 seconds
+NVD_API_KEY=your_nvd_api_key_here
+
+# ============================================================================
 # Application Settings
+# ============================================================================
+
 LOG_LEVEL=INFO
 MAX_AGENT_ITERATIONS=10
