--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
+          pip install -r requirements.txt
+          pip install -r requirements-dev.txt
 
       - name: Run tests
         run: |
@@ -43,13 +43,11 @@ jobs:
 
       - name: Run linters
         run: |
-          # Run pre-commit hooks across the repository to enforce developer hooks
-          if command -v pre-commit >/dev/null 2>&1; then
-            pre-commit run --all-files || true
-          fi
           # isort checks import sorting
           isort --check-only .
           # black checks formatting
           black --check .
           # flake8 static checks
           flake8 .
+          # Run pre-commit hooks across the repository
+          pre-commit run --all-files
