--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,38 @@
-pre-commit==3.4.0
-black==24.1.0
-isort==5.12.0
-flake8==6.1.0
-flake8-bugbear==23.11.26
+# MLPatrol Development Dependencies
+# Install with: pip install -r requirements-dev.txt
+
+# First install production dependencies
+-r requirements.txt
+
+# Testing Framework
+pytest>=8.3.0
+pytest-mock>=3.14.0
+pytest-asyncio>=0.24.0
+pytest-cov>=4.1.0
+pytest-timeout>=2.3.0
+pytest-xdist>=3.6.0  # For parallel test execution
+
+# Code Quality
+black>=24.1.0
+isort>=5.13.0
+flake8>=7.0.0
+flake8-docstrings>=1.7.0
+flake8-bugbear>=24.0.0
+mypy>=1.8.0
+
+# Pre-commit Hooks
+pre-commit>=3.6.0
+
+# Security
+pip-audit>=2.7.0
+safety>=3.0.0
+bandit>=1.7.7
+
+# Documentation
+sphinx>=7.2.0
+sphinx-rtd-theme>=2.0.0
+myst-parser>=2.0.0
+
+# Development Tools
+ipython>=8.20.0
+ipdb>=0.13.13
