--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ langchain-community>=0.3.0
 langgraph>=0.2.0
 
 # Data Analysis
-numpy>=1.26.0,<2.0.0
+numpy>=2.1.0  # Python 3.13+ requires numpy 2.x
 pandas>=2.1.0
 scikit-learn>=1.3.0
 scipy>=1.11.0
