--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -51,3 +51,25 @@ jobs:
           flake8 .
           # Run pre-commit hooks across the repository
           pre-commit run --all-files
+
+  security:
+    runs-on: ubuntu-latest
+    name: Dependency Security Scan
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.12
+
+      - name: Install pip-audit
+        run: |
+          python -m pip install --upgrade pip
+          pip install pip-audit
+
+      - name: Scan dependencies for known vulnerabilities
+        run: |
+          # Audit installed dependencies for CVEs
+          pip-audit --requirement requirements.txt --requirement requirements-dev.txt --desc
