feat: Add secrets scanning pre-commit hook (ISSUE-21)
- Install and configure detect-secrets
- Add pre-commit hook to block secrets
- Generate and commit baseline
- Update CONTRIBUTING.md with secrets handling guide
- Add detect-secrets to requirements-dev.txt

All tests passing: 188/188
Coverage maintained: 61.07%

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,3 +24,19 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: check-yaml
+
+  - repo: https://github.com/Yelp/detect-secrets
+    rev: v1.5.0
+    hooks:
+      - id: detect-secrets
+        args: ['--baseline', '.secrets.baseline']
+        exclude: |
+          (?x)^(
+            package-lock\.json|
+            poetry\.lock|
+            .*\.ipynb|
+            coverage\.json|
+            coverage_baseline\.json|
+            \.secrets\.baseline|
+            baseline_tests\.txt
+          )$
